nasazení bety.sg

--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
     </ul>
     <p>Člen a certifikovaný komisař <a href="https://www.akc.cz/" title="Asociace kuchařů a cukrářů">AKC</a>, člen <a href="https://www.ahrcr.cz/" title="Asociace hotelů a restaurací České republiky">AHR ČR</a> a její gastronomické sekce. <a href="https://www.cenyahr.cz/drzitele-vyrocnich-cen-2007" title="Držitelé výročních cen 2007">Restauratér roku 2007</a> s opětovnou <a href="https://www.cenyahr.cz/predstaveni-kandidatu" title="Kandidáti výročních cen 2018">nominací v roce 2018</a>. Držitel <a href="/files/cert.jpg">bronzové medaile M. D. Rettigové</a>.</p>
     <ul class="button-list">
-      <li><a class="button button-img" href="#denni_nabidka"><span class="fas fa-3x fa-utensils">i</span>Denní nabídka</a></li>
+      <li><a class="button button-img" href="#denni_specialita"><span class="fas fa-3x fa-utensils">i</span>Denní specialita</a></li>
       <li><a class="button button-img" href="#akce"><span class="fas fa-3x fa-calendar-check">i</span>Víkendová akce</a></li>
       <li><a class="button button-img" href="#stala_nabidka"><span class="fas fa-3x fa-clipboard-list">i</span>Stálá nabídka</a></li>
       <li><a class="button button-img" href="https://www.google.cz/maps/place/STEAKGRILL/@50.389696,14.225149,15z/data=!4m5!3m4!1s0x0:0x3b8b2745f392b1bb!8m2!3d50.389696!4d14.225149?sa=X&amp;ved=0ahUKEwjuwdqnv6TUAhWBmhQKHWYwC7QQ_BIIdTAK&amp;shorturl=1&amp;dg=dbrw&amp;newdg=1"><span class="fas fa-3x fa-map-marked-alt">i</span>Kde nás najdete</a></li>
@@ -101,7 +101,7 @@
 <!--
 -->
     <section>
-      <h id="denni_nabidka" var="inputvar-nabidka" title="Denní nabídka" class="break nobalance">Denní nabídka</h>
+      <h id="denni_specialita" var="inputvar-nabidka" title="Denní specialita" class="break nobalance">Denní specialita</h>
       <desc var="inputvar-nabidka-popis">n/a</desc>
       <dl var="inputvar-nabidka-polevka1" class="meal" data-type="Soup"><dt>n/a</dt><dd>n/a</dd></dl>
       <dl var="inputvar-nabidka-polevka2" class="meal" data-type="Soup"><dt>n/a</dt><dd>n/a</dd></dl>
@@ -203,7 +203,6 @@
           </dd>
           <dd><input type="submit" id="submit" class="button" value="Registrovat se k odběru"/></dd>
         </dl>
-        <p><a href="gdpr">Podmínky ochrany osobních údajů (GDPR)</a></p>
       </form>
       <h id="contact_form">Kontaktní formulář</h>
       <desc>Pošlete nám dotaz nebo zpětnou vazbu, jak se vám u nás líbilo nebo v čem bychom se mohli zlepšit. Pokud uvedete kontaktní údaje, můžete očekávat naší odpověď. <span var="inputvar-rezervace">n/a</span></desc>
