--- a/napojovy_listek.html
+++ b/napojovy_listek.html
@@ -1,40 +1,38 @@
 <?xml version="1.0" encoding="utf-8"?>
 <body xml:lang="cs" ns="https://www.steakgrill.cz">
   <h id="napojovy_listek" author="InternetGuru" ctime="2018-03-28" data-alternate-en="https://en.steakgrill.cz/beverages">Nápojový lístek</h>
-  <desc>Naše domácí limonády z čerstvého ovoce Vás osvěží za horkého dne a náš připravovaný pečený čaj zahřeje v sychravém počasí. Pivařům čepujeme Plzeň s občasnou nabídkou piv z malých pivovarů a nezaostáváme v širší nabídce kvalitních rumů.</desc>
+  <desc>Naše domácí limonády z čerstvého ovoce Vás osvěží za horkého dne a náš připravovaný pečený čaj zahřeje v sychravém počasí. Pivařům čepujeme Staropramen s nabídkou piv z malých pivovarů a nezaostáváme v širší nabídce kvalitních rumů.</desc>
   <section class="contenttoc">
     <h id="alkoholicke" title="Alkoholické nápoje, pivo…">Alkoholické nápoje, pivo</h>
     <desc>n/a</desc>
     <dl class="meal meal-oneline">
-      <dt>Pilsner Urquell točené <span>0,3 l</span></dt>
-      <dd class="price">30 Kč</dd>
-      <dt>Pilsner Urquell točené <span>0,5 l</span></dt>
-      <dd class="price">45 Kč</dd>
-      <dt>Staropramen 11° točené <span>0,3 l</span></dt>
-      <dd class="price">25 Kč</dd>
-      <dt>Staropramen 11° točené <span>0,5 l</span></dt>
-      <dd class="price">35 Kč</dd>
+      <dt>Staropramen Extra chmelená 12 točené <span>0,4 l</span></dt>
+      <dd class="price">40 Kč</dd>
+      <dt>Speciál z minipivovaru točené <span>0,3 l a 0,5 l</span></dt>
+      <dd>Dle <a href="#pivo">aktuální nabídky</a></dd>
       <dt>Staropramen nealko točené <span>0,3 l</span></dt>
-      <dd class="price">25 Kč</dd>
+      <dd class="price">30 Kč</dd>
       <dt>Staropramen nealko točené <span>0,5 l</span></dt>
-      <dd class="price">35 Kč</dd>
+      <dd class="price">40 Kč</dd>
       <dt>Stella Artois nealko (sklo) <span>0,33 l</span></dt>
       <dd class="price">33 Kč</dd>
       <dt>Guinness (plech) <span>0,44 l</span></dt>
       <dd class="price">48 Kč</dd>
       <dd>Irské černé pivo</dd>
-      <dt>Carling British Cider Cherry <span>0,3 l</span></dt>
-      <dd class="price">45 Kč</dd>
-      <dd>4 % alk. (sklo)</dd>
+      <dt>Hoegaarden (sklo) <span>0,33 l</span></dt>
+      <dd class="price">40 Kč</dd>
+      <dd>Pšeničné belgické pivo</dd>
+      <dt>Pilsner Urquell (sklo) <span>0,33 l</span></dt>
+      <dd class="price">35 Kč</dd>
     </dl>
 
-    <h id="michane" class="break" title="Míchané nápoje, aperitivy a sekty…">Míchané nápoje, aperitivy a sekty</h>
+    <h id="michane" class="break" title="Míchané nápoje a aperitivy a sekty…">Míchané nápoje a aperitivy</h>
     <desc>n/a</desc>
 <!--     <desc>U obsluhy je možné si vyžádat lístek míchaních nápojů, na kterém jsou jednotlivé
 nápoje detailněji popsány včetně složení.</desc> -->
     <dl class="meal meal-oneline">
       <dt>Crodino Spritz</dt>
-      <dd class="price">60 Kč</dd>
+      <dd class="price">65 Kč</dd>
       <dd>Crodino, soda, plátek pomeranče, led</dd>
       <dt>Aperol Spritz</dt>
       <dd class="price">90 Kč</dd>
@@ -55,15 +53,24 @@ nápoje detailněji popsány včetně složení.</desc> -->
       <dd class="price">45 Kč</dd>
       <dt>Campari <span>0,05 l</span></dt>
       <dd class="price">50 Kč</dd>
-      <dt>Gancia Prosecco <a var="definition-doc">DOC</a>, Brut <span>0,1 l</span></dt>
-      <dd class="price">60 Kč</dd>
-      <dt>Gancia Prosecco <a var="definition-doc">DOC</a>, Brut <span>0,75 l</span></dt>
-      <dd class="price">350 Kč</dd>
-      <dt>Bepin de Eto Millesimato <a var="definition-docg">DOCG</a> <span>0,75 l</span></dt>
-      <dd class="price">600 Kč</dd>
-      <dt>Louis Perdrier <span>0,75 l</span></dt>
-      <dd class="price">240 Kč</dd>
-      <dd>Demi Sec nebo Brut (oblast Francie)</dd>
+      <dt>Louis Perdrier Demi Sec/Brut <span>0,75 l</span></dt>
+      <dd class="price">290 Kč</dd>
+      <dd>Oblast Francie</dd>
+      <dt>Gio Cuvée <span>0,1 l</span></dt>
+      <dd class="price">60 Kč</dd>      
+      <dd>Prosecco od výrobce Conca d´ORO <a var="definition-doc">DOC</a> Extra dry</dd>
+      <dt>Gio Cuvée <span>0,75 l</span></dt>
+      <dd class="price">290 Kč</dd>      
+      <dd>Prosecco od výrobce Conca d´ORO <a var="definition-doc">DOC</a> Extra dry</dd>
+      <dt>Millesimato Cuvée <span>0,75 l</span></dt>
+      <dd class="price">370 Kč</dd>      
+      <dd>Prosecco od výrobce Conca d´ORO <a var="definition-doc">DOC</a> Extra dry</dd>
+      <dt>Conegliano Valdobbiadene Superiore <span>0,75 l</span></dt>
+      <dd class="price">550 Kč</dd>      
+      <dd>Prosecco od výrobce Conca d´ORO <a var="definition-docg">DOCG</a> Brut</dd>
+      <dt>Conegliano Valdobbiadene Superiore <span>0,75 l</span></dt>
+      <dd class="price">550 Kč</dd>
+      <dd>Prosecco od výrobce Vedova <a var="definition-docg">DOCG</a> Brut</dd>
     </dl>
 
     <h id="nealkoholicke" class="break" title="Nealkoholické nápoje…">Nealkoholické nápoje</h>
@@ -75,26 +82,25 @@ nápoje detailněji popsány včetně složení.</desc> -->
       <dd class="price">65 Kč</dd>
       <dt>Coca-Cola <span>0,33 l</span></dt>
       <dd class="price">40 Kč</dd>
-      <dd>(original, light, zero)</dd>
+      <dd>(original, zero lemon, zero)</dd>
       <dt>Fanta pomeranč <span>0,33 l</span></dt>
       <dd class="price">40 Kč</dd>
       <dt>Sprite <span>0,33 l</span></dt>
       <dd class="price">40 Kč</dd>
-      <dt>Kinley tonic <span>0,25 l</span></dt>
+      <dt>Kinley <span>0,25 l</span></dt>
       <dd class="price">40 Kč</dd>
-      <dt>Kinley zázvor <span>0,25 l</span></dt>
-      <dd class="price">40 Kč</dd>
+      <dd>(tonic water, ginger, rose)</dd>
       <dt>Cappy <span>0,25 l</span></dt>
       <dd class="price">40 Kč</dd>
-      <dd>(pomeranč, jahoda, multivitamín, černý rybíz, hruška, jablko)</dd>
+      <dd>(pomeranč 100%, jahoda, multivitamín, černý rybíz, hruška, jablko)</dd>
       <dt>Bonaqua <span>0,25 l</span></dt>
       <dd class="price">30 Kč</dd>
-      <dd>(perlivá, jemně perlivá, neperlivá)</dd>
+      <dd>Perlivá, jemně perlivá, neperlivá</dd>
 <!--       <dt>Red bull <span>0,25 l</span></dt> -->
 <!--       <dd class="price">60 Kč</dd> -->
       <dt>Romerquelle <span>0,33 l</span></dt>
       <dd class="price">35 Kč</dd>
-      <dd>(perlivá, neperlivá)</dd>
+      <dd>(perlivá, neperlivá, lemon grass)</dd>
       <dt>Romerquelle <span>0,75 l</span></dt>
       <dd class="price">70 Kč</dd>
       <dd>(perlivá, neperlivá)</dd>
@@ -102,7 +108,7 @@ nápoje detailněji popsány včetně složení.</desc> -->
       <dd class="price">40 Kč</dd>
       <dd>(zelený s mangem a heřmánkem, černý s broskví a ibiškem)</dd>
       <dt>Karafa s vodou a citronem <span>1 l</span></dt>
-      <dd class="price">45 Kč</dd>
+      <dd class="price">65 Kč</dd>
     </dl>
 
     <h id="horke" class="break" title="Horké nápoje, káva a čaj…">Horké nápoje, káva a čaj</h>
@@ -129,15 +135,15 @@ nápoje detailněji popsány včetně složení.</desc> -->
       <dd class="price">70 Kč</dd>
       <dt>Frappé</dt>
       <dd class="price">45 Kč</dd>
-      <dt>Sypané čaje montecelio </dt>
-      <dd class="price">47 Kč</dd>
+      <dt>Sypané čaje </dt>
+      <dd class="price">49 Kč</dd>
       <dd>(ovocný, černý – Earl Grey, rooibos, zelený)</dd>
       <dt>Zázvorový čaj</dt>
       <dd class="price">60 Kč</dd>
-      <dd>(čerstvý zázvor)</dd>
+      <dd>Čerstvý zázvor</dd>
       <dt>Mátový čaj</dt>
       <dd class="price">60 Kč</dd>
-      <dd>(čerstvá máta)</dd>
+      <dd>Čerstvá máta</dd>
       <dt>Náš pečený ovocný čaj</dt>
       <dd class="price">60 Kč</dd>
       <dd>Směs hruška + jablko + švestka + grep</dd>
@@ -166,6 +172,8 @@ nápoje detailněji popsány včetně složení.</desc> -->
       <dd class="price">80 Kč</dd>
       <dt>Kraken Black Spiced</dt>
       <dd class="price">50 Kč</dd>
+      <dt>Demon´s Share </dt>
+      <dd class="price">100 Kč</dd>      
       <dt>Don Papa</dt>
       <dd class="price">100 Kč</dd>
       <dt>Legendario Elixir 7 <a var="definition-yo">YO</a></dt>
@@ -193,7 +201,11 @@ nápoje detailněji popsány včetně složení.</desc> -->
       <dd class="price">45 Kč</dd>
       <dt>Slivovice</dt>
       <dd class="price">50 Kč</dd>
-      <dt>Tanquearay</dt>
+      <dt>Tanquearay Gin</dt>
+      <dd class="price">60 Kč</dd>
+      <dt>Bulldog Gin</dt>
+      <dd class="price">60 Kč</dd>
+      <dt>Broker´s pink Gin</dt>
       <dd class="price">60 Kč</dd>
       <dt>Fernet / Fernet Citrus</dt>
       <dd class="price">35 Kč</dd>
