--- a/vinny_listek.html
+++ b/vinny_listek.html
@@ -6,36 +6,41 @@
     <h id="sekty" title="Sekty a Prosecco…">Sekty a Prosecco</h>
     <desc>n/a</desc>
     <dl class="meal">
-      <dt>Louis Perdier Demi Sec</dt>
+      <dt>Louis Perdrier Demi Sec / Brut</dt>
       <dd>Oblast Francie, Odrůda UgniBlanc.</dd>
-      <dd>Sekt světle žluté barvy se zelenými tóny, lahodnou pěnou a množstvím jemných bublinek. Svěží ovocná a květinová vůně s náznaky citrusového ovoce. Mladé víno jemně nasládlé chuti s vyváženou šumivostí.</dd>
+      <dd>Sekt světle žluté barvy se zelenými tóny, lahodnou pěnou a množstvím jemných bublinek. Svěží ovocná a květinová vůně.</dd>
       <dd class="price">
-        <span><span>0,75 l</span><span>240 Kč</span></span>
+        <span><span>0,75 l</span><span>290 Kč</span></span>
       </dd>
     </dl>
     <dl class="meal">
-      <dt>Louis Perdier Brut</dt>
-      <dd>Oblast Francie, Odrůda Ugni Blanc, Chenin, Folle Blanche.</dd>
-      <dd>Sekt světle žluté barvy s náznaky dozelena. S množstvím jemných bublinek. Svěží jemná vůně s jemným aroma žlutého ovoce. Elegantní víno vybalancované chuti. K vychutnání pro slavnostní příležitosti.</dd>
+      <dt>Prosecco Conca d´ORO <a var="definition-doc">DOC</a> Gio Cuvée, Extra dry</dt>
+      <dd>Světle zlatavá barva, krásná vůně připomínající zahradní ovoce a květiny. Chuť svěží, šťavnatá, ovocná a plná příjemné dochutí šťavnaté kyselinky.</dd>
       <dd class="price">
-        <span><span>0,75 l</span><span>240 Kč</span></span>
-      </dd>
-    </dl>
-
-    <dl class="meal">
-      <dt>Bepin de Eto Millesimato, Conegliano Valdobbiadene Prosecco Superiore <a var="definition-docg">DOCG</a>, Extra Dry</dt>
-      <dd>Světle slámově žlutá barva se zelenkavými odlesky. Delikátní vůně čerstvě upečeného chleba, kterou doplňují tóny jablek, hrušek a meruněk. V závěru vůně růží a akátu. Velmi jemné a sametové víno s lehce sladkou chutí, která se harmonicky snoubí s kyselejší chutí připomínající limetovou šťávu.</dd>
-      <dd class="price">
-        <span><span>0,75 l</span><span>600 Kč</span></span>
+        <span><span>0,75 l</span><span>290 Kč</span></span>
       </dd>
     </dl>
 
     <dl class="meal">
-      <dt>Gancia Prosecco <a var="definition-doc">DOC</a>, Brut</dt>
-      <dd>Prosecco odrůdy hroznů Glera světle žluté barvy s nazelenalými odlesky. Jemné, vytrvalé perlení. Intenzivní a přetrvávající vůně; ovocná, kvalitní, připomínající zelené jablko a květy akácie. Sladká a svěží, příjemná chuť, mimořádně jemná a vyvážená, ovocné zakončení.</dd>
+      <dt>Prosecco Conca d´ORO <a var="definition-doc">DOC</a> Millesimato Cuvée, Extra dry</dt>
+      <dd>Prosecco s bohatým sametovým perlením a světlejší slámově žlutou barvou. Intenzivní vůně jablka, meruňkové tóny s náznakem bílé broskve. V ústech je víno elegantní s vyváženým poměrem pikantní kyselinky a zbytkového cukru.</dd>
+      <dd class="price">
+        <span><span>0,75 l</span><span>370 Kč</span></span>
+      </dd>
+    </dl>
+
+    <dl class="meal">
+      <dt>Prosecco Conca d´ORO <a var="definition-docg">DOCG</a> Conegliano Valdobbiadene Superiore, Brut</dt>
+      <dd>Prosecco vyrobené v té nejvyšší kvalitě s bohatým sametovým perlením a světlejší slámově žlutou barvou. Má kompletní a elegantní charakter jak ve vůni, tak chuti. Postupně se rozvíjí svěží citrusy a zároveň ovocné tóny zralých jablek, hrušek, květů akátu a žlutého melounu.</dd>
       <dd class="price multiple">
-        <span><span>0,1 l</span><span>60 Kč</span></span>
-        <span><span>0,75 l</span><span>350 Kč</span></span>
+        <span><span>0,75 l</span><span>550 Kč</span></span>
+      </dd>
+    </dl>
+    <dl class="meal">
+      <dt>Prosecco Vedova <a var="definition-docg">DOCG</a> Conegliano Valdobbiadene Superiore, Brut</dt>
+      <dd>Prosecco Superiore z místa Valdobbiadene s původem hroznů ze svahů této lokality je vždy zárukou té nejvyšší kvality prosecca. Získá si Vás komplexní vůní s tóny jasmínu, růže a akátu, které velmi příjemně ladí s tóny jablka, banánu a ananasu s minerálními podtóny.</dd>
+      <dd class="price multiple">
+        <span><span>0,75 l</span><span>550 Kč</span></span>
       </dd>
     </dl>
 
@@ -43,7 +48,7 @@
     <desc>n/a</desc>
     <dl class="meal">
       <dt>Zafrica – polosuché bílé</dt>
-      <dd>Oblast Jižní Afrika, Western Cape.</dd>
+      <dd>Oblast Jižní Afrika.</dd>
       <dd>Víno světlejší slámově žluté barvy s tóny do zelena. Aroma vína je středně intenzivní s tóny hruškového kompotu. Džem s lehkou stopou sušených bylin. V chuti příjemně vybalancovaný cukr s vyšší kyselinkou nabízející tóny citrusů a ananasu.</dd>
       <dd class="price">
         <span><span>0,2 l</span><span>58 Kč</span></span>
@@ -51,34 +56,34 @@
     </dl>
     <dl class="meal">
       <dt>Chardonnay <a var="definition-igtigp">IGP</a> – suché bílé</dt>
-      <dd>Oblast Francie, Languedoc.</dd>
+      <dd>Oblast Francie.</dd>
       <dd>Lehké bílé vínobílé víno s vůní bílých květin a koření.</dd>
       <dd class="price">
-        <span><span>0,2 l</span><span>56 Kč</span></span>
+        <span><span>0,2 l</span><span>58 Kč</span></span>
       </dd>
     </dl>
     <dl class="meal">
       <dt>BIG ZIN Rosé Primitivo 2016 – polosuché růžové</dt>
-      <dd>Oblast Itálie, Puglia</dd>
+      <dd>Oblast Itálie.</dd>
       <dd>Víno sytě růžové barvy. Aroma vína je středně intenzivní připomínající růže a jahodový džem. V chuti vystupují tóny třešní a jahod se smetanou v dochuti.</dd>
       <dd class="price">
         <span><span>0,2 l</span><span>56 Kč</span></span>
       </dd>
     </dl>
     <dl class="meal">
-      <dt>Syrah – suché červené</dt>
-      <dd>Oblast Francie, Languedoc.</dd>
-      <dd>Víno purpurově rudé barvy. Svěží ovocná chuť s tóny máty a ostružin s příjemnou tříslovinou.</dd>
+      <dt>IL Barone – suché červené</dt>
+      <dd>Oblast Itálie.</dd>
+      <dd>Rubínově červené víno plné intenzity. Na vůni ovocné tóny dominuje černý rybíz a borůvky a objevuje se vůně kardamomu, dřeva a kouře.</dd>
       <dd class="price">
-        <span><span>0,2 l</span><span>56 Kč</span></span>
+        <span><span>0,2 l</span><span>58 Kč</span></span>
       </dd>
     </dl>
     <dl class="meal">
-      <dt>Zafrica – polosuché červené</dt>
-      <dd>Oblast Jižní Afrika, Western Cape.</dd>
-      <dd>Víno rubínově červené barvy. Aroma dominuje černý rybíz a borůvky. Vybalancovaná chuť s tóny černého ovoce, jemnými taniny a příjemně nasládlým závěrem.</dd>
+      <dt>Rendeiro – polosuché červené</dt>
+      <dd>Oblast Portugalsko.</dd>
+      <dd>Víno rubínově červené barvy s ovocnou a sametovou chutí, jemnými taniny a příjemně nasládlým závěrem.</dd>
       <dd class="price">
-        <span><span>0,2 l</span><span>58 Kč</span></span>
+        <span><span>0,2 l</span><span>56 Kč</span></span>
       </dd>
     </dl>
 
@@ -86,34 +91,34 @@
     <desc>n/a</desc>
 
     <dl class="meal">
-      <dt>Vinné sklepy Zapletal Müller Thurgau 2016 kabinet – suché</dt>
+      <dt>Zapletal Müller Thurgau 2018 kabinet – suché</dt>
       <dd>Oblast Morava, Velké Bílovice.</dd>
-      <dd>Víno má jiskrnou zlatavouz barvu. Ve vůni a chuti se snoubí bílá broskev, hrušky a jemné tóny citrusů Harmonická dochuť s jemným zbytkovým cukrem a šťavnatou kyselinkou.</dd>
+      <dd>Víno má jiskrnou zlatavouz barvu. Ve vůni a chuti se snoubí bílá broskev, hrušky a jemné tóny citrusů. Harmonická dochuť s jemným zbytkovým cukrem a šťavnatou kyselinkou.</dd>
       <dd class="price">
-        <span><span>0,75 l</span><span>230 Kč</span></span>
+        <span><span>0,75 l</span><span>240 Kč</span></span>
       </dd>
     </dl>
 
     <dl class="meal">
-      <dt>Vinné sklepy Zapletal Rulandské šedé 2016 pozdní sběr – suché</dt>
+      <dt>Zapletal Rulandské šedé 2018 pozdní sběr – suché</dt>
       <dd>Oblast Morava, Velké Bílovice.</dd>
       <dd>Barva je sytě žlutá, ve vůni a chuti nás toto víno zaujme tóny hruškového kompotu a jemnou máslovou, až smetanovou dlouhotrvající dochutí.</dd>
       <dd class="price">
-        <span><span>0,75 l</span><span>340 Kč</span></span>
+        <span><span>0,75 l</span><span>350 Kč</span></span>
       </dd>
     </dl>
 
     <dl class="meal">
-      <dt>Louis Dry Riesling 2016 – suché</dt>
-      <dd>Oblast Německo, Rheinhessen.</dd>
-      <dd>Víno světle slámově žluté barvy. Delikátní vůně bílých broskví, meruněk a šťavnatých hrušek. Působivá plnost na patře s dlouhou dochutí.</dd>
+      <dt>Riesling DIVA 2018 – suché</dt>
+      <dd>Oblast Rakousko, Kremstal.</dd>
+      <dd>Svěží harmonické víno s krásnou kompozicí ovoce, broskvového květu, meruňky, která se velmi pěkně snoubí s kořenitostí se stopou máty, v dochuti s říznou kyselinkou a minerálními tóny.</dd>
       <dd class="price">
-        <span><span>0,75 l</span><span>290 Kč</span></span>
+        <span><span>0,75 l</span><span>280 Kč</span></span>
       </dd>
     </dl>
 
     <dl class="meal">
-      <dt>Endless River Sauvignon 2016 – suché</dt>
+      <dt>Endless River Sauvignon 2018 – suché</dt>
       <dd>Oblast Nový Zéland, Marlborough.</dd>
       <dd>Víno světle žluté barvy. Ve vůni tóny tropického ovoce a angreštu. Tento Sauvignon Blanc má svěží kyselinku a buket letního žlutého ovoce. V jádru chutná výrazná mineralita, podpořená pronikavou ovocnou chutí s tóny bylin.</dd>
       <dd class="price">
@@ -122,11 +127,13 @@
     </dl>
 
     <dl class="meal">
-      <dt>Grillo <a var="definition-igtigp">IGT</a> 2015 – suché</dt>
-      <dd>Oblast Sicílie, Noto.</dd>
-      <dd>Víno slámově žluté barvy se zlatými odstíny. Intenzivní květová vůně smíšená s tóny citrusů a žlutých broskví, tóny trávy a sladkých mandlí. Vyvážená, svěží a bohatá chuť.</dd>
+      <dt>Veltlínské zelené 2018 – suché</dt>
+      <dd>Oblast Rakousko, DAC kamptal.</dd>
+      <dd>Nádherně voňavé víno s nižší zlatavou barvou. S jemnou ovocnou chutí
+zeleného jablka a citrusových plodů, v dochuti můžeme nalézt bylinné tóny,
+doplněné příjemnou minerálností.</dd>
       <dd class="price">
-        <span><span>0,75 l</span><span>420 Kč</span></span>
+        <span><span>0,75 l</span><span>320 Kč</span></span>
       </dd>
     </dl>
 
@@ -134,7 +141,7 @@
     <desc>n/a</desc>
 
     <dl class="meal">
-      <dt>Vinné sklepy Zapletal Frankovka pozdní sběr 2016 – suché</dt>
+      <dt>Zapletal Frankovka pozdní sběr 2016 – suché</dt>
       <dd>Oblast Morava, Velké Bílovice.</dd>
       <dd>Barva tohoto vína je tmavě rubínová s fialovými odlesky. Výrazná vůně višní v hořké čokoládě a švestkových povidel. V chuti se k povidlům přidávají i hutnější tóny čokolády a kávy.</dd>
       <dd class="price">
@@ -152,20 +159,20 @@
     </dl>
 
     <dl class="meal">
-      <dt>Lynx Petite Shiraz a Zinfandel 2015 – polosuché</dt>
-      <dd>Oblast USA, Kalifornie.</dd>
-      <dd>Víno rubínové barvy. Červená víno s intenzivními tóny přezrálých třešní, koření, vanilky a čokolády. Jeho chuť je měkce sametová, šťavnatě ovocná, lehce pikantní se zralými (teplými) tříslovinami a dlouhou hladkou dochutí.</dd>
+      <dt>Thomson Shiraz 2016 – suché</dt>
+      <dd>Oblast Austrálie, Byrne Vineyards.</dd>
+      <dd>Vůni bobulovitého ovoce jemně doplňuje aroma a chuť dubového sudu, dominuje malina, moruše a vanilka. V chuti typický jihoaustralský Shiraz: plný, bohatý s tmavě červenou barvou.</dd>
       <dd class="price">
-        <span><span>0,75 l</span><span>290 Kč</span></span>
+        <span><span>0,75 l</span><span>400 Kč</span></span>
       </dd>
     </dl>
 
     <dl class="meal">
-      <dt>Nero d´Avola <a var="definition-igtigp">IGT</a> 2015 – suché</dt>
-      <dd>Oblast Sicílie, Noto</dd>
-      <dd>S rubínově červenou barvou je v tomto víně překypující pikantní aroma řervených bobulí s výraznými ovocnými tóny. Chuť je harmonická s příjemnou strukturou.</dd>
+      <dt>First edition Carmenere 2017 – suché</dt>
+      <dd>Oblast Chile, Valle Secreto.</dd>
+      <dd>Již při letmém nadechnutí k tomuto jedinečnému vínu vás okouzlí sametové tóny ostružin a zralého tmavého ovoce. Chuť je identická s vůní, velmi vyvážená, elegantní s dlouhou perzistencí s příjemným dotekem hřebíčku a pepře.</dd>
       <dd class="price">
-        <span><span>0,75 l</span><span>420 Kč</span></span>
+        <span><span>0,75 l</span><span>690 Kč</span></span>
       </dd>
     </dl>
   </section>
