--- a/index.html
+++ b/index.html
@@ -167,7 +167,7 @@
       <dt>Mezi svátky</dt>
       <dd>24. až 26. prosince zavřeno,</dd>
       <dd>31. prosince otevřeno do 16 hod.,</dd>
-      <dd>1. ledna 2020 zavřeno.</dd>
+      <dd>1. ledna zavřeno.</dd>
       <dt>Informace pro hosty</dt>
       <dd>Objednávky jídel přijímáme nejpozději hodinu před koncem otevírací doby.</dd>
       <dd>Přijímáme platební karty.</dd>
