--- a/vinny_listek.html
+++ b/vinny_listek.html
@@ -1,89 +1,89 @@
 <?xml version="1.0" encoding="utf-8"?>
 <body xml:lang="cs" ns="https://www.steakgrill.cz">
   <h id="vinny_listek" author="InternetGuru" ctime="2018-03-28" data-alternate-en="https://en.steakgrill.cz/wine_list">Vinný lístek</h>
-  <desc>Vinný lístek sestavuje přední český specialista přímo na míru naší restauraci. Hlavním kritériem volby je vedle nabídky jídel také přijatelná cena. Vína nabízíme francouzská, italská a česká.</desc>
+  <desc>Vinný lístek sestavuje přední český specialista přímo na míru naší restauraci. Hlavním kritériem volby je vedle nabídky jídel také přijatelná cena. Vína nabízíme francouzská, italská a&#160;česká.</desc>
   <section class="contenttoc">
-    <h id="sekty" title="Sekty a Prosecco…">Sekty a Prosecco</h>
+    <h id="sekty" title="Sekty a&#160;Prosecco…">Sekty a&#160;Prosecco</h>
     <desc>n/a</desc>
     <dl class="meal">
       <dt>Louis Perdrier Demi Sec / Brut</dt>
       <dd>Oblast Francie, Odrůda UgniBlanc.</dd>
-      <dd>Sekt světle žluté barvy se zelenými tóny, lahodnou pěnou a množstvím jemných bublinek. Svěží ovocná a květinová vůně.</dd>
+      <dd>Sekt světle žluté barvy se zelenými tóny, lahodnou pěnou a&#160;množstvím jemných bublinek. Svěží ovocná a&#160;květinová vůně.</dd>
       <dd class="price">
-        <span><span>0,75 l</span><span>290 Kč</span></span>
+        <span><span>0,75&#160;l</span><span>290&#160;Kč</span></span>
       </dd>
     </dl>
     <dl class="meal">
-      <dt>Prosecco Conca d´ORO <a var="definition-doc">DOC</a> Gio Cuvée, Extra dry</dt>
-      <dd>Světle zlatavá barva, krásná vůně připomínající zahradní ovoce a květiny. Chuť svěží, šťavnatá, ovocná a plná příjemné dochutí šťavnaté kyselinky.</dd>
+      <dt>Prosecco Conca d´ORO&#160;<a var="definition-doc">DOC</a> Gio Cuvée, Extra dry</dt>
+      <dd>Světle zlatavá barva, krásná vůně připomínající zahradní ovoce a&#160;květiny. Chuť svěží, šťavnatá, ovocná a&#160;plná příjemné dochutí šťavnaté kyselinky.</dd>
       <dd class="price">
-        <span><span>0,75 l</span><span>290 Kč</span></span>
+        <span><span>0,75&#160;l</span><span>290&#160;Kč</span></span>
       </dd>
     </dl>
 
     <dl class="meal">
-      <dt>Prosecco Conca d´ORO <a var="definition-doc">DOC</a> Millesimato Cuvée, Extra dry</dt>
-      <dd>Prosecco s bohatým sametovým perlením a světlejší slámově žlutou barvou. Intenzivní vůně jablka, meruňkové tóny s náznakem bílé broskve. V ústech je víno elegantní s vyváženým poměrem pikantní kyselinky a zbytkového cukru.</dd>
+      <dt>Prosecco Conca d´ORO&#160;<a var="definition-doc">DOC</a> Millesimato Cuvée, Extra dry</dt>
+      <dd>Prosecco s&#160;bohatým sametovým perlením a&#160;světlejší slámově žlutou barvou. Intenzivní vůně jablka, meruňkové tóny s&#160;náznakem bílé broskve. V&#160;ústech je víno elegantní s&#160;vyváženým poměrem pikantní kyselinky a&#160;zbytkového cukru.</dd>
       <dd class="price">
-        <span><span>0,75 l</span><span>370 Kč</span></span>
+        <span><span>0,75&#160;l</span><span>370&#160;Kč</span></span>
       </dd>
     </dl>
 
     <dl class="meal">
       <dt>Prosecco Conca d´ORO <a var="definition-docg">DOCG</a> Conegliano Valdobbiadene Superiore, Brut</dt>
-      <dd>Prosecco vyrobené v té nejvyšší kvalitě s bohatým sametovým perlením a světlejší slámově žlutou barvou. Má kompletní a elegantní charakter jak ve vůni, tak chuti. Postupně se rozvíjí svěží citrusy a zároveň ovocné tóny zralých jablek, hrušek, květů akátu a žlutého melounu.</dd>
+      <dd>Prosecco vyrobené v&#160;té nejvyšší kvalitě s&#160;bohatým sametovým perlením&#160;a&#160;světlejší slámově žlutou barvou.&#160;Má kompletní a&#160;elegantní charakter jak ve vůni, tak chuti. Postupně se rozvíjí svěží citrusy a&#160;zároveň ovocné tóny zralých jablek, hrušek, květů akátu a&#160;žlutého melounu.</dd>
       <dd class="price multiple">
-        <span><span>0,75 l</span><span>550 Kč</span></span>
+        <span><span>0,75&#160;l</span><span>550&#160;Kč</span></span>
       </dd>
     </dl>
     <dl class="meal">
       <dt>Prosecco Vedova <a var="definition-docg">DOCG</a> Conegliano Valdobbiadene Superiore, Brut</dt>
-      <dd>Prosecco Superiore z místa Valdobbiadene s původem hroznů ze svahů této lokality je vždy zárukou té nejvyšší kvality prosecca. Získá si Vás komplexní vůní s tóny jasmínu, růže a akátu, které velmi příjemně ladí s tóny jablka, banánu a ananasu s minerálními podtóny.</dd>
+      <dd>Prosecco Superiore z&#160;místa Valdobbiadene s&#160;původem hroznů ze svahů této lokality je vždy zárukou té nejvyšší kvality prosecca. Získá si Vás komplexní vůní s&#160;tóny jasmínu, růže a&#160;akátu, které velmi příjemně ladí s&#160;tóny jablka, banánu a&#160;ananasu s&#160;minerálními podtóny.</dd>
       <dd class="price multiple">
-        <span><span>0,75 l</span><span>550 Kč</span></span>
+        <span><span>0,75&#160;l</span><span>550&#160;Kč</span></span>
       </dd>
     </dl>
 
     <h id="rozlevana_vina" class="break" title="Rozlévaná vína…">Rozlévaná vína</h>
     <desc>n/a</desc>
     <dl class="meal">
-      <dt>Zafrica – polosuché bílé</dt>
+      <dt>Zafrica&#160;– polosuché bílé</dt>
       <dd>Oblast Jižní Afrika.</dd>
-      <dd>Víno světlejší slámově žluté barvy s tóny do zelena. Aroma vína je středně intenzivní s tóny hruškového kompotu. Džem s lehkou stopou sušených bylin. V chuti příjemně vybalancovaný cukr s vyšší kyselinkou nabízející tóny citrusů a ananasu.</dd>
+      <dd>Víno světlejší slámově žluté barvy s&#160;tóny do zelena. Aroma vína je středně intenzivní s&#160;tóny hruškového kompotu. Džem s&#160;lehkou stopou sušených bylin. V&#160;chuti příjemně vybalancovaný cukr s&#160;vyšší kyselinkou nabízející tóny citrusů a&#160;ananasu.</dd>
       <dd class="price">
-        <span><span>0,2 l</span><span>58 Kč</span></span>
+        <span><span>0,2&#160;l</span><span>58&#160;Kč</span></span>
       </dd>
     </dl>
     <dl class="meal">
-      <dt>Chardonnay <a var="definition-igtigp">IGP</a> – suché bílé</dt>
+      <dt>Chardonnay <a var="definition-igtigp">IGP</a>&#160;– suché bílé</dt>
       <dd>Oblast Francie.</dd>
-      <dd>Lehké bílé vínobílé víno s vůní bílých květin a koření.</dd>
+      <dd>Lehké bílé vínobílé víno s&#160;vůní bílých květin a&#160;koření.</dd>
       <dd class="price">
-        <span><span>0,2 l</span><span>58 Kč</span></span>
+        <span><span>0,2&#160;l</span><span>58&#160;Kč</span></span>
       </dd>
     </dl>
     <dl class="meal">
-      <dt>BIG ZIN Rosé Primitivo 2016 – polosuché růžové</dt>
+      <dt>BIG ZIN Rosé Primitivo 2016&#160;– polosuché růžové</dt>
       <dd>Oblast Itálie.</dd>
-      <dd>Víno sytě růžové barvy. Aroma vína je středně intenzivní připomínající růže a jahodový džem. V chuti vystupují tóny třešní a jahod se smetanou v dochuti.</dd>
+      <dd>Víno sytě růžové barvy. Aroma vína je středně intenzivní připomínající růže a&#160;jahodový džem. V&#160;chuti vystupují tóny třešní a&#160;jahod se smetanou v&#160;dochuti.</dd>
       <dd class="price">
-        <span><span>0,2 l</span><span>56 Kč</span></span>
+        <span><span>0,2&#160;l</span><span>56&#160;Kč</span></span>
       </dd>
     </dl>
     <dl class="meal">
-      <dt>IL Barone – suché červené</dt>
+      <dt>IL Barone&#160;– suché červené</dt>
       <dd>Oblast Itálie.</dd>
-      <dd>Rubínově červené víno plné intenzity. Na vůni ovocné tóny dominuje černý rybíz a borůvky a objevuje se vůně kardamomu, dřeva a kouře.</dd>
+      <dd>Rubínově červené víno plné intenzity. Na vůni ovocné tóny dominuje černý rybíz a&#160;borůvky a&#160;objevuje se vůně kardamomu, dřeva a&#160;kouře.</dd>
       <dd class="price">
-        <span><span>0,2 l</span><span>58 Kč</span></span>
+        <span><span>0,2&#160;l</span><span>58&#160;Kč</span></span>
       </dd>
     </dl>
     <dl class="meal">
-      <dt>Rendeiro – polosuché červené</dt>
+      <dt>Rendeiro&#160;– polosuché červené</dt>
       <dd>Oblast Portugalsko.</dd>
-      <dd>Víno rubínově červené barvy s ovocnou a sametovou chutí, jemnými taniny a příjemně nasládlým závěrem.</dd>
+      <dd>Víno rubínově červené barvy s&#160;ovocnou a&#160;sametovou chutí, jemnými taniny a&#160;příjemně nasládlým závěrem.</dd>
       <dd class="price">
-        <span><span>0,2 l</span><span>56 Kč</span></span>
+        <span><span>0,2&#160;l</span><span>56&#160;Kč</span></span>
       </dd>
     </dl>
 
@@ -91,49 +91,49 @@
     <desc>n/a</desc>
 
     <dl class="meal">
-      <dt>Zapletal Müller Thurgau 2018 kabinet – suché</dt>
+      <dt>Zapletal Müller Thurgau 2018&#160;kabinet&#160;– suché</dt>
       <dd>Oblast Morava, Velké Bílovice.</dd>
-      <dd>Víno má jiskrnou zlatavouz barvu. Ve vůni a chuti se snoubí bílá broskev, hrušky a jemné tóny citrusů. Harmonická dochuť s jemným zbytkovým cukrem a šťavnatou kyselinkou.</dd>
+      <dd>Víno má jiskrnou zlatavouz barvu. Ve vůni a&#160;chuti se snoubí bílá broskev, hrušky a&#160;jemné tóny citrusů. Harmonická dochuť s&#160;jemným zbytkovým cukrem a&#160;šťavnatou kyselinkou.</dd>
       <dd class="price">
-        <span><span>0,75 l</span><span>240 Kč</span></span>
+        <span><span>0,75&#160;l</span><span>240&#160;Kč</span></span>
       </dd>
     </dl>
 
     <dl class="meal">
-      <dt>Zapletal Rulandské šedé 2018 pozdní sběr – suché</dt>
+      <dt>Zapletal Rulandské šedé 2018&#160;pozdní sběr&#160;– suché</dt>
       <dd>Oblast Morava, Velké Bílovice.</dd>
-      <dd>Barva je sytě žlutá, ve vůni a chuti nás toto víno zaujme tóny hruškového kompotu a jemnou máslovou, až smetanovou dlouhotrvající dochutí.</dd>
+      <dd>Barva je sytě žlutá, ve vůni a&#160;chuti nás toto víno zaujme tóny hruškového kompotu a&#160;jemnou máslovou, až smetanovou dlouhotrvající dochutí.</dd>
       <dd class="price">
-        <span><span>0,75 l</span><span>350 Kč</span></span>
+        <span><span>0,75&#160;l</span><span>350&#160;Kč</span></span>
       </dd>
     </dl>
 
     <dl class="meal">
-      <dt>Riesling DIVA 2018 – suché</dt>
+      <dt>Riesling DIVA 2018&#160;– suché</dt>
       <dd>Oblast Rakousko, Kremstal.</dd>
-      <dd>Svěží harmonické víno s krásnou kompozicí ovoce, broskvového květu, meruňky, která se velmi pěkně snoubí s kořenitostí se stopou máty, v dochuti s říznou kyselinkou a minerálními tóny.</dd>
+      <dd>Svěží harmonické víno s&#160;krásnou kompozicí ovoce, broskvového květu, meruňky, která se velmi pěkně snoubí s&#160;kořenitostí se stopou máty, v&#160;dochuti s&#160;říznou kyselinkou a&#160;minerálními tóny.</dd>
       <dd class="price">
-        <span><span>0,75 l</span><span>280 Kč</span></span>
+        <span><span>0,75&#160;l</span><span>280&#160;Kč</span></span>
       </dd>
     </dl>
 
     <dl class="meal">
-      <dt>Endless River Sauvignon 2018 – suché</dt>
+      <dt>Endless River Sauvignon 2018&#160;– suché</dt>
       <dd>Oblast Nový Zéland, Marlborough.</dd>
-      <dd>Víno světle žluté barvy. Ve vůni tóny tropického ovoce a angreštu. Tento Sauvignon Blanc má svěží kyselinku a buket letního žlutého ovoce. V jádru chutná výrazná mineralita, podpořená pronikavou ovocnou chutí s tóny bylin.</dd>
+      <dd>Víno světle žluté barvy. Ve vůni tóny tropického ovoce a&#160;angreštu. Tento Sauvignon Blanc má svěží kyselinku a&#160;buket letního žlutého ovoce. V&#160;jádru chutná výrazná mineralita, podpořená pronikavou ovocnou chutí s&#160;tóny bylin.</dd>
       <dd class="price">
-        <span><span>0,75 l</span><span>280 Kč</span></span>
+        <span><span>0,75&#160;l</span><span>280&#160;Kč</span></span>
       </dd>
     </dl>
 
     <dl class="meal">
-      <dt>Veltlínské zelené 2018 – suché</dt>
+      <dt>Veltlínské zelené 2018&#160;– suché</dt>
       <dd>Oblast Rakousko, DAC kamptal.</dd>
-      <dd>Nádherně voňavé víno s nižší zlatavou barvou. S jemnou ovocnou chutí
-zeleného jablka a citrusových plodů, v dochuti můžeme nalézt bylinné tóny,
+      <dd>Nádherně voňavé víno s&#160;nižší zlatavou barvou. S&#160;jemnou ovocnou chutí
+zeleného jablka a&#160;citrusových plodů, v&#160;dochuti můžeme nalézt bylinné tóny,
 doplněné příjemnou minerálností.</dd>
       <dd class="price">
-        <span><span>0,75 l</span><span>320 Kč</span></span>
+        <span><span>0,75&#160;l</span><span>320&#160;Kč</span></span>
       </dd>
     </dl>
 
@@ -141,38 +141,38 @@ doplněné příjemnou minerálností.</dd>
     <desc>n/a</desc>
 
     <dl class="meal">
-      <dt>Zapletal Frankovka pozdní sběr 2016 – suché</dt>
+      <dt>Zapletal Frankovka pozdní sběr 2016&#160;– suché</dt>
       <dd>Oblast Morava, Velké Bílovice.</dd>
-      <dd>Barva tohoto vína je tmavě rubínová s fialovými odlesky. Výrazná vůně višní v hořké čokoládě a švestkových povidel. V chuti se k povidlům přidávají i hutnější tóny čokolády a kávy.</dd>
+      <dd>Barva tohoto vína je tmavě rubínová s&#160;fialovými odlesky. Výrazná vůně višní v&#160;hořké čokoládě a&#160;švestkových povidel. V&#160;chuti se k&#160;povidlům přidávají i&#160;hutnější tóny čokolády a&#160;kávy.</dd>
       <dd class="price">
-        <span><span>0,75 l</span><span>280 Kč</span></span>
+        <span><span>0,75&#160;l</span><span>280&#160;Kč</span></span>
       </dd>
     </dl>
 
     <dl class="meal">
-      <dt>Montenero Primitivo 2015 – suché</dt>
+      <dt>Montenero Primitivo 2015&#160;– suché</dt>
       <dd>Oblast Itálie, Puglia.</dd>
-      <dd>Víno s aroma švestek, anýzu, skořice a vanilky. Intenzivní chuť lékořice, ostružin, tmavé čokolády a třešní. Na patře se projeví příjemná kyselinka doplněná vanilkovými tóny.</dd>
+      <dd>Víno s&#160;aroma švestek, anýzu, skořice a&#160;vanilky. Intenzivní chuť lékořice, ostružin, tmavé čokolády a&#160;třešní. Na patře se projeví příjemná kyselinka doplněná vanilkovými tóny.</dd>
       <dd class="price">
-        <span><span>0,75 l</span><span>260 Kč</span></span>
+        <span><span>0,75&#160;l</span><span>260&#160;Kč</span></span>
       </dd>
     </dl>
 
     <dl class="meal">
-      <dt>Thomson Shiraz 2016 – suché</dt>
+      <dt>Thomson Shiraz 2016&#160;– suché</dt>
       <dd>Oblast Austrálie, Byrne Vineyards.</dd>
-      <dd>Vůni bobulovitého ovoce jemně doplňuje aroma a chuť dubového sudu, dominuje malina, moruše a vanilka. V chuti typický jihoaustralský Shiraz: plný, bohatý s tmavě červenou barvou.</dd>
+      <dd>Vůni bobulovitého ovoce jemně doplňuje aroma a&#160;chuť dubového sudu, dominuje malina, moruše a&#160;vanilka. V&#160;chuti typický jihoaustralský Shiraz: plný, bohatý s&#160;tmavě červenou barvou.</dd>
       <dd class="price">
-        <span><span>0,75 l</span><span>400 Kč</span></span>
+        <span><span>0,75&#160;l</span><span>400&#160;Kč</span></span>
       </dd>
     </dl>
 
     <dl class="meal">
-      <dt>First edition Carmenere 2017 – suché</dt>
+      <dt>First edition Carmenere 2017&#160;– suché</dt>
       <dd>Oblast Chile, Valle Secreto.</dd>
-      <dd>Již při letmém nadechnutí k tomuto jedinečnému vínu vás okouzlí sametové tóny ostružin a zralého tmavého ovoce. Chuť je identická s vůní, velmi vyvážená, elegantní s dlouhou perzistencí s příjemným dotekem hřebíčku a pepře.</dd>
+      <dd>Již při letmém nadechnutí k&#160;tomuto jedinečnému vínu vás okouzlí sametové tóny ostružin a&#160;zralého tmavého ovoce. Chuť je identická s&#160;vůní, velmi vyvážená, elegantní s&#160;dlouhou perzistencí s&#160;příjemným dotekem hřebíčku a&#160;pepře.</dd>
       <dd class="price">
-        <span><span>0,75 l</span><span>690 Kč</span></span>
+        <span><span>0,75&#160;l</span><span>690&#160;Kč</span></span>
       </dd>
     </dl>
   </section>
