--- a/stala_nabidka.html
+++ b/stala_nabidka.html
@@ -1,9 +1,9 @@
 <?xml version="1.0" encoding="utf-8"?>
 <body xml:lang="cs" ns="https://www.steakgrill.cz">
-  <h id="stala_nabidka" author="InternetGuru" ctime="2018-03-28" data-alternate-en="https://en.steakgrill.cz/regular_menu">Stálá nabídka jídel</h>
+  <h data-id="regular_menu" id="stala_nabidka" author="InternetGuru" ctime="2018-03-28" data-alternate-en="https://en.steakgrill.cz/regular_menu">Stálá nabídka jídel</h>
   <desc>Nabízíme populární jídla mezinárodní kuchyně. Mimo steaků a&#160;burgerů si přijdou na své i&#160;milovníci salátů a&#160;netradičních polévek, pro které je náš podnik také vyhlášený.</desc>
   <section class="contenttoc">
-    <h id="polevky">Polévky</h>
+    <h data-id="soups" id="polevky">Polévky</h>
     <desc>Po celý den připravujeme čtyři druhy polévek. Polévky jsou dle vlastní Mikeovy receptury. Takové jinde neochutnáte!</desc>
     <ul class="photoswipe">
       <li><a href="/files/full/design/soups.jpg"><img src="/files/design/soups.jpg" alt="Soups"/></a></li>
@@ -47,7 +47,7 @@
       </dd>
     </dl>
 
-    <h class="break" id="hamburgery_a_testoviny">Hamburgery a&#160;těstoviny</h>
+    <h data-id="hamburgers_and_pasta" class="break" id="hamburgery_a_testoviny">Hamburgery a&#160;těstoviny</h>
     <desc>Hamburgery připravujeme tradičně&#160;– velké a&#160;šťavnaté. Těstoviny doporučujeme jako lehčí alternativu k&#160;jídlu pro menší strávníky.</desc>
     <dl class="meal">
       <dt>Chicken Burger</dt>
@@ -74,7 +74,7 @@
       <dd class="price">175&#160;Kč</dd>
     </dl>
 
-    <h class="break" id="salatove_talire">Salátové talíře</h>
+    <h data-id="salads" class="break" id="salatove_talire">Salátové talíře</h>
     <desc>Nabízíme výběr ze světových salátů, které se nejlépe osvědčily pro naší klientelu. K&#160;salátům doporučujeme naši populární grilovanou bagetu s&#160;česnekovým máslem.</desc>
     <ul class="photoswipe">
       <li><a href="/files/full/design/salads.jpg"><img src="/files/design/salads.jpg" alt="Salads"/></a></li>
@@ -118,7 +118,7 @@
       <dd class="price">59&#160;Kč</dd>
     </dl>
 
-    <h class="break" id="z_panve_fritezy_a_woku">Z&#160;pánve, fritézy a&#160;woku</h>
+    <h data-id="frying_pan_wok" class="break" id="z_panve_fritezy_a_woku">Z&#160;pánve, fritézy a&#160;woku</h>
     <desc>Pro přípravu mezinárodních jídel používáme autentické nástroje. Kachní a&#160;krůtí maso vždy nakládáme či napichujeme a&#160;připravujeme metodou <a var="definition-sous-vide">sous-vide</a>.</desc>
     <dl class="meal">
       <dt>Crispy Salmon</dt>
@@ -153,7 +153,7 @@
       <dd class="price">189&#160;Kč</dd>
     </dl>
 
-    <h class="break" id="z_grilu_a_griddlu">Z&#160;grilu a&#160;griddlu</h>
+    <h data-id="grill_griddle" class="break" id="z_grilu_a_griddlu">Z&#160;grilu a&#160;griddlu</h>
     <desc>Grilujeme prvotřídní marinované nikdy nemražené maso. Stejně jako u&#160;steaků je grilované maso vždy odleželé na ideální teplotu (nikoli přímo z&#160;lednice).</desc>
     <dl class="meal">
       <dt>Grilovaná hovězí játra</dt>
@@ -187,7 +187,7 @@
       <dd class="price">249&#160;Kč</dd>
     </dl>
 
-    <h class="break" id="grilovane_steaky">Grilované steaky</h>
+    <h data-id="grilled_steaks" class="break" id="grilovane_steaky">Grilované steaky</h>
     <desc>Provádíme opravdové grilování prémiového masa na přímém ohni&#160;– vždy odleželého na pokojovou teplotu. Úpravu hovězích steaků doporučujeme medium-rare, maximálně medium. Ke steakům si můžete objednat některou z&#160;našich omáček.</desc>
     <ul class="photoswipe">
       <li><a href="/files/full/design/steaks.jpg"><img src="/files/design/steaks.jpg" alt="Steaks"/></a></li>
@@ -223,7 +223,7 @@
       <dd class="price">529&#160;Kč</dd>
     </dl>
 
-    <h class="break" id="sladkosti">Sladkosti</h>
+    <h data-id="desserts" class="break" id="sladkosti">Sladkosti</h>
     <desc>Nabízíme osvědčené restaurační dezerty, které sami vyrábíme podle autentických receptur. Dezerty připravujeme na objednávku, proto jsou vždy čerstvé a&#160;prvotřídní.</desc>
     <dl class="meal">
       <dt>Hot Chocolate <a var="definition-fondant">Fondant</a></dt>
@@ -270,7 +270,7 @@
       <dd class="price">50&#160;Kč</dd>
     </dl>
 
-    <h class="break" id="detska_jidla">Dětská jídla</h>
+    <h data-id="kids_menu" class="break" id="detska_jidla">Dětská jídla</h>
     <desc>Pro naše nejmenší strávníky připravujeme za zvýhodněnou cenu jídla s&#160;nízkou gramáží. Jídla jsou pro děti do 12&#160;let. Pro ostatní zákazníky je cena o&#160;50&#160;Kč vyšší.</desc>
     <dl class="meal">
       <dt>Pirátův poklad</dt>
@@ -292,7 +292,7 @@
       <dd>Jasmínová rýže, krůtí maso vařené metodou <a var="definition-sous-vide">sous-vide</a>, krájené a&#160;prohřáté v&#160;rajčatové omáčce.</dd>
       <dd class="price">79&#160;Kč</dd>
     </dl>
-    <h class="break" id="prilohy">Přílohy</h>
+    <h data-id="side_dishes" class="break" id="prilohy">Přílohy</h>
     <desc>Na přání je možné změnit přílohu u&#160;každého jídla. Pokud si nebudete jistí, jakou přílohu zvolit, nechte si poradit u&#160;obsluhy.</desc>
     <dl class="meal meal-oneline">
       <dt>Grilovaná bageta s&#160;česnekovým máslem</dt>
@@ -323,7 +323,7 @@
       <dd class="price">45&#160;Kč</dd>
     </dl>
 
-    <h class="break" id="pochutiny_omacky">Pochutiny a&#160;omáčky</h>
+    <h data-id="condiments_and_sauces" class="break" id="pochutiny_omacky">Pochutiny a&#160;omáčky</h>
     <desc>Kdo má rád rozmanité přílohy, může si zvolit z&#160;našich omáček, dipů a&#160;pochutin. Nabízené omáčky vyrábíme sami od základu.</desc>
     <dl class="meal meal-oneline">
       <dt>Čerstvě pražené mandle, 100&#160;g</dt>
@@ -352,7 +352,7 @@
       <dd>Červené papriky, lilek, česnek.</dd>
     </dl>
 
-    <h id="informace">Informace pro hosty</h>
+    <h data-id="information" id="informace">Informace pro hosty</h>
     <desc>n/a</desc>
     <ul>
       <li id="signature"><a href="#signature"><span class="fas fa-award">i</span></a> Signature food of Steakgrill&#160;– tato jídla nás charakterizují a&#160;patří k&#160;nejoblíbenějším. Je to také doporučení jídel pro naše nové zákazníky.</li>
