--- a/napojovy_listek.html
+++ b/napojovy_listek.html
@@ -1,9 +1,9 @@
 <?xml version="1.0" encoding="utf-8"?>
 <body xml:lang="cs" ns="https://www.steakgrill.cz">
-  <h id="napojovy_listek" author="InternetGuru" ctime="2018-03-28" data-alternate-en="https://en.steakgrill.cz/beverages">Nápojový lístek</h>
+  <h data-id="beverages" id="napojovy_listek" author="InternetGuru" ctime="2018-03-28" data-alternate-en="https://en.steakgrill.cz/beverages">Nápojový lístek</h>
   <desc>Naše domácí limonády z&#160;čerstvého ovoce Vás osvěží za horkého dne a&#160;náš připravovaný pečený čaj zahřeje v&#160;sychravém počasí. Pivařům čepujeme Staropramen s&#160;nabídkou piv z&#160;malých pivovarů a&#160;nezaostáváme v&#160;širší nabídce kvalitních rumů.</desc>
   <section class="contenttoc">
-    <h id="alkoholicke" title="Alkoholické nápoje, pivo…">Alkoholické nápoje, pivo</h>
+    <h data-id="alcoholic" id="alkoholicke" title="Alkoholické nápoje, pivo…">Alkoholické nápoje, pivo</h>
     <desc>n/a</desc>
     <dl class="meal meal-oneline">
       <dt>Staropramen Extra chmelená 12&#160;točené <span>0,4&#160;l</span></dt>
@@ -26,7 +26,7 @@
       <dd class="price">35&#160;Kč</dd>
     </dl>
 
-    <h id="michane" class="break" title="Míchané nápoje a&#160;aperitivy a&#160;sekty…">Míchané nápoje a&#160;aperitivy</h>
+    <h data-id="mixed" id="michane" class="break" title="Míchané nápoje a&#160;aperitivy a&#160;sekty…">Míchané nápoje a&#160;aperitivy</h>
     <desc>n/a</desc>
 <!--     <desc>U&#160;obsluhy je možné si vyžádat lístek míchaních nápojů, na kterém jsou jednotlivé
 nápoje detailněji popsány včetně složení.</desc> -->
@@ -73,7 +73,7 @@ nápoje detailněji popsány včetně složení.</desc> -->
       <dd>Prosecco od výrobce Vedova <a var="definition-docg">DOCG</a> Brut</dd>
     </dl>
 
-    <h id="nealkoholicke" class="break" title="Nealkoholické nápoje…">Nealkoholické nápoje</h>
+    <h data-id="soft_drinks" id="nealkoholicke" class="break" title="Nealkoholické nápoje…">Nealkoholické nápoje</h>
     <desc>n/a</desc>
     <dl class="meal meal-oneline">
       <dt>Domácí citronáda</dt>
@@ -111,7 +111,7 @@ nápoje detailněji popsány včetně složení.</desc> -->
       <dd class="price">65&#160;Kč</dd>
     </dl>
 
-    <h id="horke" class="break" title="Horké nápoje, káva a&#160;čaj…">Horké nápoje, káva a&#160;čaj</h>
+    <h data-id="hot_drinks" id="horke" class="break" title="Horké nápoje, káva a&#160;čaj…">Horké nápoje, káva a&#160;čaj</h>
     <desc>n/a</desc>
     <p class="print"><img src="/files/thumbs/coffee.jpg" alt="Coffee"/></p>
     <dl class="meal meal-oneline">
@@ -149,7 +149,7 @@ nápoje detailněji popsány včetně složení.</desc> -->
       <dd>Směs hruška + jablko + švestka + grep</dd>
     </dl>
 
-    <h id="rumy" class="break">Rumy a&#160;pálenky</h>
+    <h data-id="rums" id="rumy" class="break">Rumy a&#160;pálenky</h>
     <desc>Rumy a&#160;pálenky se podávají v&#160;objemu 0,4&#160;cl. Pro více informací o&#160;jednotlivých rumech požádejte obsluhu o&#160;rumový lístek.</desc>
     <dl class="meal meal-oneline">
       <dt>Diplomático Mantuano</dt>
@@ -188,7 +188,7 @@ nápoje detailněji popsány včetně složení.</desc> -->
       <dd class="price">130&#160;Kč</dd>
     </dl>
 
-    <h id="destilaty" class="break" title="Destiláty">Destiláty</h>
+    <h data-id="spirits" id="destilaty" class="break" title="Destiláty">Destiláty</h>
     <desc>Nabízíme obecně známé destiláty, které podáváme v&#160;objemu 0,4&#160;cl.</desc>
     <dl class="meal meal-oneline">
       <dt>Captain Morgan</dt>
