--- a/vinny_listek.html
+++ b/vinny_listek.html
@@ -1,9 +1,9 @@
 <?xml version="1.0" encoding="utf-8"?>
 <body xml:lang="cs" ns="https://www.steakgrill.cz">
-  <h id="vinny_listek" author="InternetGuru" ctime="2018-03-28" data-alternate-en="https://en.steakgrill.cz/wine_list">Vinný lístek</h>
+  <h data-id="wine_list" id="vinny_listek" author="InternetGuru" ctime="2018-03-28" data-alternate-en="https://en.steakgrill.cz/wine_list">Vinný lístek</h>
   <desc>Vinný lístek sestavuje přední český specialista přímo na míru naší restauraci. Hlavním kritériem volby je vedle nabídky jídel také přijatelná cena. Vína nabízíme francouzská, italská a&#160;česká.</desc>
   <section class="contenttoc">
-    <h id="sekty" title="Sekty a&#160;Prosecco…">Sekty a&#160;Prosecco</h>
+    <h data-id="sparkling_wines_and_prosecco" id="sekty" title="Sekty a&#160;Prosecco…">Sekty a&#160;Prosecco</h>
     <desc>n/a</desc>
     <dl class="meal">
       <dt>Louis Perdrier Demi Sec / Brut</dt>
@@ -44,7 +44,7 @@
       </dd>
     </dl>
 
-    <h id="rozlevana_vina" class="break" title="Rozlévaná vína…">Rozlévaná vína</h>
+    <h data-id="house_wine" id="rozlevana_vina" class="break" title="Rozlévaná vína…">Rozlévaná vína</h>
     <desc>n/a</desc>
     <dl class="meal">
       <dt>Zafrica&#160;– polosuché bílé</dt>
@@ -87,7 +87,7 @@
       </dd>
     </dl>
 
-    <h id="bila_vina" class="break" title="Bílá vína…">Bílá vína</h>
+    <h data-id="white_wines" id="bila_vina" class="break" title="Bílá vína…">Bílá vína</h>
     <desc>n/a</desc>
 
     <dl class="meal">
@@ -137,7 +137,7 @@ doplněné příjemnou minerálností.</dd>
       </dd>
     </dl>
 
-    <h id="cervena_vina" class="break" title="Červená vína…">Červená vína</h>
+    <h data-id="red_wines" id="cervena_vina" class="break" title="Červená vína…">Červená vína</h>
     <desc>n/a</desc>
 
     <dl class="meal">
